Another color pallet

--- a/test.html
+++ b/test.html
@@ -3,16 +3,41 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Elijah Retzlaff</title>
+    <link rel="stylesheet" href="styleTest.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
   <body>
-    <div>
-      <a href="index.html"> back</a>
+
+    <div class="scene" id="background__gradient">
+      <div class="box">
+        <!-- <div class="box__face box__face--front"></div> -->
+        <div class="box__face box__face--back"></div>
+        <div class="box__face box__face--right"></div>
+        <div class="box__face box__face--left">
+            <div class="left-text">
+              <a class="anchor-plain" href="test.html">Thoughts</a>
+            </div>
+            <div class="left-text">
+              <a class="anchor-plain" href="https://github.com/riverray121">Projects</a>
+            </div>
+            <div class="left-text">
+              <a class="anchor-plain" href="https://twitter.com/retzlaff_elijah">Interests</a>  
+            </div>
+            <div class="left-text">
+              <a class="anchor-plain" href="https://www.linkedin.com/in/elijah-retzlaff/">Socials</a>
+            </div>
+        </div>
+        <div class="box__face box__face--top">
+            <div class="top-text">
+              <a class="anchor-plain" href="index.html">ELIJAH RETZLAFF</a>
+            </div>
+        </div>
+        <div class="box__face box__face--bottom"></div>
+      </div>
     </div>
 
-
+    <!-- <script type="text/javascript" src="/Users/elijahretzlaff/Documents/DEVELOPMENT/My-Website/riverray121.github.io/javescript.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   </body>
 </html>
